[package]
name = "njhp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.28", features = ["full"] }
anyhow = "1.0"
scraper = "0.17"
time = {version = "0.3", features = ["macros", "formatting"]}
rusqlite = { version = "0.29", features = ["bundled"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
